--- a/app/static/frontend/src/app/app.component.html
+++ b/app/static/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--suppress BuyFluidPluginNoteInspection -->
 <style>
 </style>
 
@@ -57,8 +58,13 @@
         <h6>API settings (leave empty to use the defaults)</h6>
         <div class="form-group">
             <label for="input-defaultScore">Default temperature score</label>
-            <input type="number" class="form-control" id="input-defaultScore" step="0.1" name="input-defaultScore"
-                [(ngModel)]="defaultScore">
+            <!--<input type="number" class="form-control" id="input-defaultScore" step="0.1" name="input-defaultScore"-->
+                <!--[(ngModel)]="defaultScore">-->
+            <select class="form-control" [(ngModel)]="defaultScore" name="defaultMethod"
+                class="form-control" id="input-defaultScore">
+                <option *ngFor="let defaultMethod of availableDefaultScores" [ngValue]="defaultMethod">{{defaultMethod}}</option>
+            </select>
+
         </div>
         <div class="form-group">
             <label for="input-aggregationMethod">Aggregation method</label>
@@ -150,7 +156,7 @@
                             <td>{{company.contribution | number:'1.2-2'}}&#176;C</td>
                         </tr>
                     </tbody>
-                </table>        
+                </table>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
