--- a/app/static/frontend/src/app/app.component.html
+++ b/app/static/frontend/src/app/app.component.html
@@ -56,10 +56,9 @@
     <form (ngSubmit)="getTemperatureScore(f)" #f="ngForm" *ngIf="columns.length > 0">
         <hr />
         <h6>API settings (leave empty to use the defaults)</h6>
+        <p>Choose the following filters for data-filtering or aggregation of columns.</p>
         <div class="form-group">
             <label for="input-defaultScore">Default temperature score</label>
-            <!--<input type="number" class="form-control" id="input-defaultScore" step="0.1" name="input-defaultScore"-->
-                <!--[(ngModel)]="defaultScore">-->
             <select class="form-control" [(ngModel)]="defaultScore" name="defaultMethod"
                 class="form-control" id="input-defaultScore">
                 <option *ngFor="let defaultMethod of availableDefaultScores" [ngValue]="defaultMethod">{{defaultMethod}}</option>
@@ -73,15 +72,15 @@
                 <option *ngFor="let aggregationMethod of availableAggregationMethods">{{aggregationMethod}}</option>
             </select>
         </div>
+      <label for="input-filterTimeFrames">Time frame (default: mid)</label>
         <div class="form-group">
-            <label for="input-filterTimeFrames">Time frame</label>
             <select class="form-control" [(ngModel)]="filterTimeFrames" name="filterTimeFrames" multiple
                 id="input-filterTimeFrames">
-                <option *ngFor="let timeFrame of availableTimeFrames" selected>{{timeFrame}}</option>
+                <option *ngFor="let timeFrame of availableTimeFrames">{{timeFrame}}</option>
             </select>
         </div>
         <div class="form-group">
-            <label for="input-filterScopeCategory">Scope</label>
+            <label for="input-filterScopeCategory">Scope (default: s1s2, s1s2s3)</label>
             <select [(ngModel)]="filterScopeCategory" name="filterScopeCategory" multiple class="form-control"
                 id="input-filterScopeCategory">
                 <option *ngFor="let scopeCategory of availableScopeCategories">{{scopeCategory}}</option>
@@ -111,25 +110,30 @@
     </form>
 
     <div id="div-results" class="container-results" *ngIf="resultTargets.length > 0">
-        <h5>Aggregated temperature scores</h5>
+      <h5>Aggregated temperature scores</h5>
         <table class="table table-striped">
             <thead>
                 <tr>
                     <td>Group</td>
                     <td>Time frame</td>
+                    <td>Groupby</td>
                     <td>Temperature score</td>
                     <td></td>
                 </tr>
             </thead>
             <tbody *ngFor="let group of resultGroups">
+              <ng-container *ngFor="let item of resultItems | keyvalue">
                 <tr *ngFor="let timeFrame of resultTimeFrames">
                     <td>{{group}}</td>
                     <td>{{timeFrame}}</td>
-                    <td>{{resultScores[timeFrame][group]["all"]["score"] | number:'1.2-2'}}&#176;C</td>
-                    <td><button (click)="openContributors(group, timeFrame, templateContributions)" class="btn btn-sm btn-outline-primary">Contributors</button></td>
+                    <td>{{item.value}}</td>
+                    <td>{{resultScores[timeFrame][group][item.value]["score"] | number:'1.2-2'}}&#176;C</td>
+                    <td><button (click)="openContributors(group, timeFrame, item.value, templateContributions)" class="btn btn-sm btn-outline-primary">Contributors</button></td>
                 </tr>
+              </ng-container>
             </tbody>
         </table>
+
 
         <ng-template #templateContributions let-modal>
             <div class="modal-header">
